--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -35,7 +35,7 @@
             width: 100%;
             background-repeat: no-repeat;
             background-position: 50% 30%;
-            background-image: url('./background.png');
+            background-image: url('../assets/resources/background.png');
             background-size: auto;
         }
 
